Drop dependency on Commons IOUtils in tests